--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <h2 class="logo"><span>My</span>Portfolio</h2>
       <nav class="navigation">
-        <a href="mami.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="https://wa.me/6282299134010">Contact</a>
